<resources>
    <string name="app_name">UserProject</string>
    <string name="user_id">ID</string>
    <string name="user_name">Name</string>
    <string name="user_username">UserName</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="user_company">Company:</string>
    <string name="user_company_name">CompanyName</string>
    <string name="user_company_catchphrase">catchphrase</string>
    <string name="user_company_bs">BS</string>
    <string name="user_address">Address:</string>
    <string name="user_address_street">Street</string>
    <string name="user_address_city">City</string>
    <string name="user_address_suite">Suite</string>
    <string name="user_website">Website</string>
    <string name="user_address_zipcode">zipcode</string>
    <string name="user_address_geo">Geo</string>
    <string name="network_error_msg">OOPS There Is An Problem ,Try Again .</string>
    <string name="user_tvemail_clicked_msg">Email View Clicked .</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>